# planningcenter-import

./: .gitignore  pyproject.toml  scripts.py
planningcenter_import/: freeshow.py  main.py  planningcenter_client.py
planningcenter_import/templates/: planningcenter2freeshow.j2
tests/: test_freeshow.py  test_planningcenter_client.py
tests/resources/2024-04-28/: plan-2024-04-28-inc-songs.json
